# Thesis

./: .gitmodules  CMakeLists.txt  Camera.hpp  Hittable.hpp  HittableList.hpp  Image.hpp  LICENSE  Makefile  Material.hpp  Preprocessor.hpp  README.md  Random.hpp  Ray.hpp  Scene.hpp  Sphere.hpp  TOMLLoader.hpp  Util.hpp  Vec3.hpp  compile_flags.txt  config.hpp  constants.hpp  main.cpp  main.cu  partybox.toml  scene.toml  types.hpp
scenes/: benchmark1.toml  benchmark2.toml  cornellbox.toml  cornellboxplanes.toml  example.toml  manyspheres.toml  millersvillepartybox copy.toml  partybox.toml  teapot_scene.toml  triangletest.toml
